<?xml version="1.0"?>
<package format="2">
  <name>ir_sensor</name>
  <version>0.0.1</version>
  <description>IR sensor node for detecting reflective surfaces (thermal hazard simulation).</description>

  <maintainer email="dmarc1997@gmail.com">Damon Rocha</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
